src/test/deca/context/valid/created/method_not_return2.deca
//Description :
// Test d'une methode qui ne return pas
//
// Resultats :
// Pas de soucis


class Premiere {



  int random(int x){
    
    }

  }



{
}
