src/test/deca/context/invalid/created/class-extends-builtin.deca
//Description :
// Test de l'extend d'un builtin type
//
// Resultats :
// Erreur


class Premiere extends int {

}

{}
